--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
         "supertest": "2.0.1"
     },
     "engines": {
-        "node": ">=4"
+        "node": "6.3.0",
+        "npm": "3.10.3"
     }
 }
