--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
         "supertest": "2.0.1"
     },
     "engines": {
-        "node": "6.3.0",
-        "npm": "3.10.3"
+        "node": ">=4"
     }
 }
