--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
         "node-red-node-feedparser":"0.1.*",
         "node-red-node-email":"0.1.*",
         "node-red-node-twitter":"0.1.*",
-        "node-red-node-rbe":"0.1.*"
+        "node-red-node-rbe":"0.1.*",
+        "node-red-node-openweathermap": ""
     },
     "optionalDependencies": {
         "bcrypt":"~1.0.1"
